banner part is almost finish and card section is started

--- a/index.html
+++ b/index.html
@@ -1,12 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style/style.css">
+
 </head>
-<body>
-    
+
+<body class="quicksand-font">
+    <header class="weight-style">
+        <div class="banner">
+            <div class="container">
+                <div class="part-one">
+                    <h1 class="banner-title">
+                        <span id="banner-span-one">Empowering</span>
+                        students from small age <span id="banner-span-two"> towards vision</span>
+                    </h1>
+                    <p class="banner-description">
+                        With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a
+                        Diverse and Dynamic World.
+
+                    </p>
+                    <button class="banner-button">Enroll Now</button>
+
+                </div>
+
+                <div class="part-two">
+                    <img class="banner-img" src="assets/hero-kids.png" alt="">
+                </div>
+            </div>
+        </div>
+    </header>
+    <main>
+        <!-- 3 card section  -->
+        <section>
+            <h1>Standerd curriculam</h1>
+        </section>
+        <div class="care-countainer">
+            <div class="card card-1">
+                <img  class="card-image" src="assets/kinder.png" alt="">
+                <h2 class="card-title">Kinder (3-6) Years</h2>
+                <p class="card-description">Cum sociis natoque penatibus et magnis
+                    dis parturient montes, nascetur ridiculus
+                    mu sdis parturient</p>
+                <button class="card-button">Read More</button>
+            </div>
+            <div class="card card-2 ">
+                <img  class="card-image" src="assets/elementary.png" alt="">
+                <h2 class="card-title">Elementary School</h2>
+                <p class="card-description">Cum sociis natoque penatibus et magnis
+                    dis parturient montes, nascetur ridiculus
+                    mu sdis parturient</p>
+                <button class="card-button">Read More</button>
+            </div>
+            <div class="card card-3">
+                <img  class="card-image" src="assets/middle.png" alt="">
+                <h2 class="card-title">Middle (10-16) Years</h2>
+                <p class="card-description">Cum sociis natoque penatibus et magnis
+                    dis parturient montes, nascetur ridiculus
+                    mu sdis parturient</p>
+                <button class="card-button">Read More</button>
+            </div>
+        </main>
+    <footer>
+
+    </footer>
+
 </body>
+
 </html>
