--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="quicksand-font">
-    <header class="weight-style">
+    <header class="width-style">
         <div class="banner">
             <div class="container">
                 <div class="part-one">
@@ -40,34 +40,45 @@
     <main>
         <!-- 3 card section  -->
         <section>
-            <h1>Standerd curriculam</h1>
+            <h1 class="card-header-title">Standerd curriculam</h1>
+
+            <div class="care-countainer">
+                <div class="card card-1">
+
+                    <img class="card-image" src="assets/kinder.png" alt="">
+                    <h2 class="card-title">Kinder (3-6) Years</h2>
+                    <p class="card-description">Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient</p>
+                    <button class="card-button">Read More</button>
+
+                </div>
+                <div class="card card-2 ">
+                    <img class="card-image" src="assets/elementary.png" alt="">
+                    <h2 class="card-title">Elementary School</h2>
+                    <p class="card-description">Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient</p>
+                    <button class="card-button">Read More</button>
+                </div>
+                <div class="card card-3">
+                    <img class="card-image" src="assets/middle.png" alt="">
+                    <h2 class="card-title">Middle (10-16) Years</h2>
+                    <p class="card-description">Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient</p>
+                    <button class="card-button">Read More</button>
+                </div>
+            </div>
+            <!-- yollow button part  -->
+            <div class="button-container">
+                <button class="previous-button"> &lt; </button>
+                <button class="next-button"> &gt; </button>
+            </div>
         </section>
-        <div class="care-countainer">
-            <div class="card card-1">
-                <img  class="card-image" src="assets/kinder.png" alt="">
-                <h2 class="card-title">Kinder (3-6) Years</h2>
-                <p class="card-description">Cum sociis natoque penatibus et magnis
-                    dis parturient montes, nascetur ridiculus
-                    mu sdis parturient</p>
-                <button class="card-button">Read More</button>
-            </div>
-            <div class="card card-2 ">
-                <img  class="card-image" src="assets/elementary.png" alt="">
-                <h2 class="card-title">Elementary School</h2>
-                <p class="card-description">Cum sociis natoque penatibus et magnis
-                    dis parturient montes, nascetur ridiculus
-                    mu sdis parturient</p>
-                <button class="card-button">Read More</button>
-            </div>
-            <div class="card card-3">
-                <img  class="card-image" src="assets/middle.png" alt="">
-                <h2 class="card-title">Middle (10-16) Years</h2>
-                <p class="card-description">Cum sociis natoque penatibus et magnis
-                    dis parturient montes, nascetur ridiculus
-                    mu sdis parturient</p>
-                <button class="card-button">Read More</button>
-            </div>
-        </main>
+        <!-- Our stories section  -->
+
+    </main>
     <footer>
 
     </footer>
