--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 </head>
 
-<body class="quicksand-font">
-    <header class="width-style">
-        <div class="banner">
+<body class="quicksand-font width-style  bg-img">
+    <header>
+        <div class="banner ">
             <div class="container">
                 <div class="part-one">
                     <h1 class="banner-title">
@@ -77,9 +77,110 @@
             </div>
         </section>
         <!-- Our stories section  -->
+        <section class="stories">
+            <h1 class="stories-heading"> Our Stories</h1>
+            <div class="stories-container">
+                <div class="stories-1st-column">
+                    <img class="stories-1st-img" src="assets/story-1.png" alt="">
+                    <button class="stories-1st-button">November 19, 2019</button>
+                    <p class="stories-1st-title">A fun toddler coloring training on
+                        classroom
+
+                    </p>
+                    <p class="stories-1st-description">Beautiful branding for changes by Never Now in Australia.
+                        changes is a platform for open discussion in an inclusive and
+                        collaborative environment, providing the...
+
+                    </p>
+                </div>
+                <!-- stories 2nd part  -->
+                <div class="stories-2nd-column">
+
+                    <div class="stories-2nd-sub-column">
+                        <img src="assets/story-2.png" alt="" class="stories-2nd-img">
+                        <button id="same-button">November 19,2019</button>
+                        <p class="2st-title">Find out if a school fits the family's needs</p>
+                        <div class="2st-description"></div>
+                    </div>
+
+                    <div class="stories-2nd-sub-column">
+                        <img src="assets/story-3.png" alt="" class="stories-2nd-img">
+                        <button id="other-button">Novermber 19,2019</button>
+                        <p class="2st-title">Summer math and literacy centres for kids</p>
+                        <div class="2st-description"></div>
+                    </div>
+
+                    <div class="stories-2nd-sub-column">
+                        <img src="assets/story-4.png" alt="" class="stories-2nd-img">
+                        <button id="same-button">September 10,2019</button>
+                        <p class="2st-title">Classroom management techniques for new totors</p>
+                        <div class="2st-description"></div>
+                    </div>
+
+                    <div class="stories-2nd-sub-column">
+                        <img src="assets/story-5.png" alt="" class="stories-2nd-img">
+                        <button id="same-button">July 19, 2019</button>
+                        <p class="2st-title">Conversation rhymes improve kids listening</p>
+                        <div class="2st-description"></div>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <button class="view-button">View All</button>
+
+
+
+
+        </section>
+
 
     </main>
+
+    <!-- footer section  -->
+
     <footer>
+        <!-- part one  -->
+
+        <div id="frist-column text-aline">
+            <div class="beg-kids text-aline">
+                <img src="assets/logo.png" alt="">
+                <h1>Kids Education </h1>
+            </div>
+            
+            <p>Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie.
+                Mayo rib sauce Hawaiian meatball.</p>
+        
+        </div>
+        <!-- part two  -->
+
+        <div class="second-column text-aline">
+            <h3> About School</h3>
+            <ul>
+                <li> <a href="">Home </a></li>
+                <li> <a href="">About</a></li>
+                <li> <a href="">facilities</a></li>
+                <li> <a href="">Admition</a></li>
+            </ul>
+
+        </div>
+
+        <!-- part three   -->
+
+        <div class="third-column text-aline">
+            <h3>Keep in touch</h3>
+            <ul >
+                <li><img src="assets/fb.png" alt=""></li>
+                <li><img src="assets/dribble.png" alt=""></li>
+                <li><img src="assets/twitter.png" alt=""></li>
+                <li><img src="assets/google+.png" alt=""></li>
+            </ul>
+
+        </div>
+
+
+
 
     </footer>
 
