finishr of writing navbar design

--- a/index.html
+++ b/index.html
@@ -14,7 +14,33 @@
 </head>
 
 <body class="quicksand-font width-style  bg-img">
-    <header>
+    <header> 
+        <!-- nav bar part  -->
+         <nav>
+            <div class="nav-container">
+                <div class="firstlogo-img">
+                    <img src="assets/logo.png" alt="">
+                </div>
+                <ul class="nav-links">
+                    <li> <a href="">Home</a></li>
+                    <li> <a href="">About</a></li>
+                    <li> <a href="">Services</a></li>
+                    <li> <a href="">contract</a></li>
+                </ul>
+                <button class="contact-button">Contact</button>
+            </div>
+        </nav>
+
+
+
+
+
+
+
+
+
+        <!-- banner part  -->
+
         <div class="banner ">
             <div class="container">
                 <div class="part-one">
@@ -145,7 +171,7 @@
 
         <div id="frist-column text-aline">
             <div class="beg-kids text-aline">
-                <img src="assets/logo.png" alt="">
+                <img class="logo-img"  src="assets/logo.png" alt="">
                 <h1>Kids Education </h1>
             </div>
             
@@ -157,7 +183,7 @@
 
         <div class="second-column text-aline">
             <h3> About School</h3>
-            <ul>
+            <ul class="second-navlink">
                 <li> <a href="">Home </a></li>
                 <li> <a href="">About</a></li>
                 <li> <a href="">facilities</a></li>
