photos alining rendomly

--- a/index.html
+++ b/index.html
@@ -20,14 +20,18 @@
             <div class="nav-container">
                 <div class="firstlogo-img">
                     <img src="assets/logo.png" alt="">
+                    <h1>SCHOOL</h1>
                 </div>
                 <ul class="nav-links">
-                    <li> <a href="">Home</a></li>
-                    <li> <a href="">About</a></li>
-                    <li> <a href="">Services</a></li>
-                    <li> <a href="">contract</a></li>
+                    <li> <a class="nav-link1" href="">Home</a></li>
+                    <li> <a class="nav-link2" href="">About</a></li>
+                    <li> <a class="nav-link3" href="">Facilities</a></li>
+                    <li> <a class="nav-link4" href="">admission</a></li>
+                    
                 </ul>
-                <button class="contact-button">Contact</button>
+                   <div class="font-side-button">
+                   <button class="contact-button">Contact</button> 
+                  </div>
             </div>
         </nav>
 
@@ -44,10 +48,10 @@
         <div class="banner ">
             <div class="container">
                 <div class="part-one">
-                    <h1 class="banner-title">
+                    <p class="banner-title">
                         <span id="banner-span-one">Empowering</span>
                         students from small age <span id="banner-span-two"> towards vision</span>
-                    </h1>
+                    </p>
                     <p class="banner-description">
                         With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a
                         Diverse and Dynamic World.
@@ -64,19 +68,22 @@
         </div>
     </header>
     <main>
+
+
+
         <!-- 3 card section  -->
         <section>
             <h1 class="card-header-title">Standerd curriculam</h1>
 
             <div class="care-countainer">
-                <div class="card card-1">
+                <div class="card card-1 ">
 
-                    <img class="card-image" src="assets/kinder.png" alt="">
+                    <img class="card-image " src="assets/kinder.png" alt="">
                     <h2 class="card-title">Kinder (3-6) Years</h2>
                     <p class="card-description">Cum sociis natoque penatibus et magnis
                         dis parturient montes, nascetur ridiculus
                         mu sdis parturient</p>
-                    <button class="card-button">Read More</button>
+                    <button class="card-button1">Read More</button>
 
                 </div>
                 <div class="card card-2 ">
@@ -85,7 +92,7 @@
                     <p class="card-description">Cum sociis natoque penatibus et magnis
                         dis parturient montes, nascetur ridiculus
                         mu sdis parturient</p>
-                    <button class="card-button">Read More</button>
+                    <button class="card-button2">Read More</button>
                 </div>
                 <div class="card card-3">
                     <img class="card-image" src="assets/middle.png" alt="">
@@ -93,7 +100,7 @@
                     <p class="card-description">Cum sociis natoque penatibus et magnis
                         dis parturient montes, nascetur ridiculus
                         mu sdis parturient</p>
-                    <button class="card-button">Read More</button>
+                    <button class="card-button3">Read More</button>
                 </div>
             </div>
             <!-- yollow button part  -->
@@ -102,9 +109,12 @@
                 <button class="next-button"> &gt; </button>
             </div>
         </section>
+
+
+
         <!-- Our stories section  -->
         <section class="stories">
-            <h1 class="stories-heading"> Our Stories</h1>
+            <h1 class="stories-heading "> Our Stories</h1>
             <div class="stories-container">
                 <div class="stories-1st-column">
                     <img class="stories-1st-img" src="assets/story-1.png" alt="">
@@ -119,6 +129,7 @@
 
                     </p>
                 </div>
+
                 <!-- stories 2nd part  -->
                 <div class="stories-2nd-column">
 
