everything is done without resposive/media quary

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 </head>
 
-<body class="quicksand-font width-style  bg-img">
-    <header> 
+<body class="quicksand-font bg-img">
+    <header class="width-style"> 
         <!-- nav bar part  -->
          <nav>
             <div class="nav-container">
@@ -72,7 +72,7 @@
 
 
         <!-- 3 card section  -->
-        <section>
+        <section class="width-style">
             <h1 class="card-header-title">Standerd curriculam</h1>
 
             <div class="care-countainer">
@@ -113,12 +113,12 @@
 
 
         <!-- Our stories section  -->
-        <section class="stories">
+        <section class="stories width-style">
             <h1 class="stories-heading "> Our Stories</h1>
             <div class="stories-container">
                 <div class="stories-1st-column">
                     <img class="stories-1st-img" src="assets/story-1.png" alt="">
-                    <button class="stories-1st-button">November 19, 2019</button>
+                    <button class="stories-1st-button frist-same-button ">November 19, 2019</button>
                     <p class="stories-1st-title">A fun toddler coloring training on
                         classroom
 
@@ -135,29 +135,29 @@
 
                     <div class="stories-2nd-sub-column">
                         <img src="assets/story-2.png" alt="" class="stories-2nd-img">
-                        <button id="same-button">November 19,2019</button>
-                        <p class="2st-title">Find out if a school fits the family's needs</p>
+                        <button class="same-button same-button1">November 19,2019</button>
+                        <p class="second-title">Find out if a school fits the family's needs</p>
                         <div class="2st-description"></div>
                     </div>
 
                     <div class="stories-2nd-sub-column">
                         <img src="assets/story-3.png" alt="" class="stories-2nd-img">
-                        <button id="other-button">Novermber 19,2019</button>
-                        <p class="2st-title">Summer math and literacy centres for kids</p>
+                        <button class="same-button same-button2">Novermber 19,2019</button>
+                        <p class="second-title">Summer math and literacy centres for kids</p>
                         <div class="2st-description"></div>
                     </div>
 
                     <div class="stories-2nd-sub-column">
                         <img src="assets/story-4.png" alt="" class="stories-2nd-img">
-                        <button id="same-button">September 10,2019</button>
-                        <p class="2st-title">Classroom management techniques for new totors</p>
+                        <button class="same-button same-button3">September 10,2019</button>
+                        <p class="second-title">Classroom management techniques for new totors</p>
                         <div class="2st-description"></div>
                     </div>
 
                     <div class="stories-2nd-sub-column">
                         <img src="assets/story-5.png" alt="" class="stories-2nd-img">
-                        <button id="same-button">July 19, 2019</button>
-                        <p class="2st-title">Conversation rhymes improve kids listening</p>
+                        <button class="same-button same-button4">July 19, 2019</button>
+                        <p class="second-title">Conversation rhymes improve kids listening</p>
                         <div class="2st-description"></div>
                     </div>
 
@@ -180,21 +180,21 @@
     <footer>
         <!-- part one  -->
 
-        <div id="frist-column text-aline">
+        <div class="frist-column text-aline">
             <div class="beg-kids text-aline">
                 <img class="logo-img"  src="assets/logo.png" alt="">
-                <h1>Kids Education </h1>
+                <h1 class="kidds">Kids  Education</h1>
             </div>
             
-            <p>Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie.
+            <p class="pizza">Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie.
                 Mayo rib sauce Hawaiian meatball.</p>
         
         </div>
         <!-- part two  -->
 
-        <div class="second-column text-aline">
-            <h3> About School</h3>
-            <ul class="second-navlink">
+        <div class="second-column text-aline ">
+            <h3 class="school"> About School</h3>
+            <ul class="second-navlink text-aline ">
                 <li> <a href="">Home </a></li>
                 <li> <a href="">About</a></li>
                 <li> <a href="">facilities</a></li>
@@ -206,8 +206,8 @@
         <!-- part three   -->
 
         <div class="third-column text-aline">
-            <h3>Keep in touch</h3>
-            <ul >
+            <h3 class="keep">Keep in touch</h3>
+            <ul class="footer-ul" >
                 <li><img src="assets/fb.png" alt=""></li>
                 <li><img src="assets/dribble.png" alt=""></li>
                 <li><img src="assets/twitter.png" alt=""></li>
