--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <nav>
                 <div class="nav-container">
                     <div class="firstlogo-img">
-                        <img src="assets/logo.png" alt="">
+                        <img class="logo-img" src="assets/logo.png" alt="">
                         <h1 class="hide">SCHOOL</h1>
                     </div>
 
@@ -89,7 +89,7 @@
         <section class="width-style2">
             <h1 class="card-header-title">Standerd curriculam</h1>
 
-            <div class="care-countainer">
+            <div class="card-countainer">
                 <div class="card card-1 ">
 
                     <img class="card-image " src="assets/kinder.png" alt="">
@@ -190,6 +190,10 @@
     </main>
 
     <!-- footer section  -->
+
+
+
+
 
     <footer class="width-style">
         <!-- part one  -->
